	* update formatting GPS coordinates
	
Device specific changes/fixes
	* Junsi iCHargerUSB - correct power calculation for continuous recorded data while loading from OSD
	* Junsi DX* - correct input power values
	* Junsi DX* - correct system parameter dialog according updated specification
	* Junsi DX* - add graphics templates
	* Junsi iChargerDuo* - add missing input source power configuration
	* GPS-Logger3 - calculate offset of both pressure sensors while calculating pressure ∆TEC
	* GPS-Logger3 - calculate average pressure ∆TEC for 40 km/h and 70 km/h and average AirSpeed for pressure ∆TEC 1,0 hPa
	* HoTTAdapter2 - update graphics template files to have voltage in blue, current in red, ...
	* OpenTx-Telemetry - correct parsing of GPS tag with coordinates in degree with different decimals


Version 3.5.1 - 25 Oct 2021
Generic changes/fixes
	* adapt NMNEA parsing supporting GNS sentence
	* fix trigger calculation using trigger smaller as a value
	* enhance trigger capabilities to AND or OR trigger ranges
	* enhance trigger referencing primary and secondary trigger -> XSD update
	* make merge ranges merge results visible in trace log
	* enhance filling out trigger comments
	* enhance junit test checking record set time step errors
	
Device specific changes/fixes
	* HoTTAdapter* - display always given GPS version value, even if this does not match known measurement placements
	* HoTTAdapter* - evaluate byte, byte, byte, short, short, short, byte for unknown GPS (version 2,3,5 - 99)
	* HoTTAdapter* - evaluate AirSpeed provided by SM MicroVario, SM GPS-Logger3
	* HoTTAdapter2* - fix scale synchronization reference channels from 82 to 87
	* HoTTAdapter2* - synchronize scale GPS-Speed and AirSpeed
	* Core-Telemetry - fix assignment of parsed data with modified name (duplication)
	* Weatronic-Telemetry - add error handling for corrupt log files
	* GPS-Logger3 - add HoTT speed type configuration
	* GPS-Logger3 - calculate pressure delta TEC instead of pressure TEC