@@ -41,7 +41,7 @@ Die serielle Verbindung muss lediglich hergestellt werden und es erfolgt sofort 
 Diese Datenrate hat keinen geraden Teiler und man kann sie nicht einstellen. Unter Linux h&auml;tte man die M&ouml;glichkeit das Kernelmodul f&uuml;r den seriellen Adapter anzupassen. Im Internet findet man dazu entsprechende Hinweise.
 </P>
 <DIV TYPE=HEADER>
-	<H2><FONT FACE="Arial"><FONT SIZE=4><I>iCharger X6, S6, X8, X12, 406DUO, 308DUO, 4010DUO - Akkuladeger&auml;te</I></FONT></FONT></H2>
+	<H2><FONT FACE="Arial"><FONT SIZE=4><I>iCharger X6, S6, X8, X12, 406DUO, 308DUO, 4010DUO, DX6, DX8 - Akkuladeger&auml;te</I></FONT></FONT></H2>
 </DIV>
 <P ALIGN=CENTER>
 <IMG SRC="../../resource/iCharger X6.jpg" NAME="iCharger X6">
@@ -59,7 +59,7 @@ Ein Dateiselektionsdialog wird ge&ouml;ffnet und erm&ouml;glicht die Auswahl der
 Dazu muss das Ger&auml;t muss als USB Massenspeicher angeschlossensein.
 </P>
 <P>
-Mit der neusten verf&uuml;gbaren Ger&auml;te-Firmware (X&S >= 2.0.8, DUO >= 2.19) gibt es die M&ouml;glichkeit Programm-Speicher &uuml;ber den Ger&auml;te-Dialog hinzuzuf&uuml;gen oder zu ver&auml;ndern.
+Mit der neusten verf&uuml;gbaren Ger&auml;te-Firmware (X&S >= 2.0.8, DUO >= 2.19, DX >= 1.0) gibt es die M&ouml;glichkeit Programm-Speicher &uuml;ber den Ger&auml;te-Dialog hinzuzuf&uuml;gen oder zu ver&auml;ndern.
 Hierzu dient ein folgender Ger&auml;te-Dialog.
 </P>
 <P ALIGN=CENTER><IMG SRC="HelpInfo_Bild_1.jpg" NAME="HelpInfo_Bild_1" ALT="iChargerUsbDialog"></P>
