@@ -42,7 +42,7 @@ This data rate doesn't have an even divisor. Linux user will have the opportunit
 Hints how to do that can be found in the Internet.
 </P>
 <DIV TYPE=HEADER>
-	<H2><FONT FACE="Arial"><FONT SIZE=4><I>iCharger X6, S6, X8, X12, 406DUO, 308DUO, 4010DUO - battery charger</I></FONT></FONT></H2>
+	<H2><FONT FACE="Arial"><FONT SIZE=4><I>iCharger X6, S6, X8, X12, 406DUO, 308DUO, 4010DUO, DX6, DX8 - battery charger</I></FONT></FONT></H2>
 </DIV>
 <P ALIGN=CENTER>
 <IMG SRC="../../resource/iCharger X6.jpg" NAME="iCharger X6">
@@ -61,7 +61,7 @@ A file selection dialog gets opened and enable file selection for import.
 Requirement is USB mass storage detected by operating system.
 </P>
 <P>
-Using latest available device firmware (X&S >= 2.0.8, DUO >= 2.19) it is possible to manipulate or create new program memories using a dialog.
+Using latest available device firmware (X&S >= 2.0.8, DUO >= 2.19, DX >= 1.0) it is possible to manipulate or create new program memories using a dialog.
 Use the following device dialog:
 </P>
 <P ALIGN=CENTER><IMG SRC="HelpInfo_Image_1.jpg" NAME="HelpInfo_Image_1" ALT="iChargerUsbDialog"></P>
