@@ -13,6 +13,7 @@ Device specific changes/fixes
 	* Junsi DX* - correct system parameter dialog according updated specification
 	* Junsi DX* - add graphics templates
 	* Junsi iChargerDuo* - add missing input source power configuration
+	* Junsi iCharger* - update help documentation related to DX devices
 	* GPS-Logger3 - calculate offset of both pressure sensors while calculating pressure ∆TEC
 	* GPS-Logger3 - calculate average pressure ∆TEC for 40 km/h and 70 km/h and average AirSpeed for pressure ∆TEC 1,0 hPa
 	* HoTTAdapter2 - update graphics template files to have voltage in blue, current in red, ...
